src/test/ui/derives/deriving-with-repr-packed.stderr
error: `#[derive]` can't be used on a `#[repr(packed)]` struct with type or const parameters (error E0133)
  --> $DIR/deriving-with-repr-packed.rs:9:16
   |
LL | #[derive(Copy, Clone, PartialEq, Eq)]
   |                ^^^^^
   |
   = note: this error originates in the derive macro `Clone` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `#[derive]` can't be used on a `#[repr(packed)]` struct with type or const parameters (error E0133)
  --> $DIR/deriving-with-repr-packed.rs:9:23
   |
LL | #[derive(Copy, Clone, PartialEq, Eq)]
   |                       ^^^^^^^^^
   |
   = note: this error originates in the derive macro `PartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `#[derive]` can't be used on a `#[repr(packed)]` struct with type or const parameters (error E0133)
  --> $DIR/deriving-with-repr-packed.rs:9:23
   |
LL | #[derive(Copy, Clone, PartialEq, Eq)]
   |                       ^^^^^^^^^
   |
   = note: this error originates in the derive macro `PartialEq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `#[derive]` can't be used on a `#[repr(packed)]` struct with type or const parameters (error E0133)
  --> $DIR/deriving-with-repr-packed.rs:9:34
   |
LL | #[derive(Copy, Clone, PartialEq, Eq)]
   |                                  ^^
   |
   = note: this error originates in the derive macro `Eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `#[derive]` can't be used on a `#[repr(packed)]` struct that does not derive Copy (error E0133)
  --> $DIR/deriving-with-repr-packed.rs:18:10
   |
LL | #[derive(Debug)]
   |          ^^^^^
   |
   = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `#[derive]` can't be used on a `#[repr(packed)]` struct with type or const parameters (error E0133)
  --> $DIR/deriving-with-repr-packed.rs:28:10
   |
LL | #[derive(Default)]
   |          ^^^^^^^
   |
   = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `#[derive]` can't be used on a `#[repr(packed)]` struct that does not derive Copy (error E0133)
  --> $DIR/deriving-with-repr-packed.rs:28:10
   |
LL | #[derive(Default)]
   |          ^^^^^^^
   |
   = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `#[derive]` can't be used on a `#[repr(packed)]` struct that does not derive Copy (error E0133)
  --> $DIR/deriving-with-repr-packed.rs:36:10
   |
LL | #[derive(Hash)]
   |          ^^^^
   |
   = note: this error originates in the derive macro `Hash` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 8 previous errors

